--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quickjs",
-  "version": "0.1.15",
+  "version": "0.1.17",
   "description":"quick front-end structure solution.",
   "author": "JohnKim <cjxsgn@163.com>",
   "homepage": "http://q.quickjs.org/",
@@ -20,23 +20,17 @@
   },
   "dependencies": {
     "grunt": "~0.4.1",
-    "grunt-quick-transport": "^0.1.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-cmd-concat": "~0.2.7",
-    "grunt-contrib-copy": "~0.4.0",
-    "grunt-contrib-jshint": "~0.2.0",
-    "grunt-contrib-qunit": "~0.2.1",
-    "grunt-contrib-uglify": "~0.1.2",
+    "grunt-build-seajs": "~0.0.3",
     "grunt-contrib-watch": "~0.3.1",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.4.0",
+    "commander":"~2.5.0",
     "shelljs": "~0.3.0",
     "prompt":"0.2.6",
-    "quick-plugins":"1.2.18",
-    "quick-command-build": "~0.1.26",
-    "quick-command-serve": "~0.0.19",
-    "quick-command-init": "~0.0.3",
-    "colors":"0.6.2",
-    "commander":"1.3.2"
+    "quick-plugins":">=1.2.24",
+    "quick-command-build": ">=0.1.26",
+    "quick-command-serve": ">=0.0.21",
+    "quick-command-init": ">=0.0.4",
+    "colors":"0.6.2"
   }
 }
